# rsfgsea

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  compare_multilevel  compare_nes
.github/workflows/: rust.yml
crates/rsfgsea/: Cargo.toml
crates/rsfgsea-cli/: Cargo.toml
crates/rsfgsea-cli/src/: main.rs
crates/rsfgsea-gpu/: Cargo.toml
crates/rsfgsea-gpu/src/: lib.rs  shader.wgsl
crates/rsfgsea-gpu/tests/: cpu_tests.rs  fgsea_simple_test.rs
crates/rsfgsea/src/: algo.rs  io.rs  lib.rs
crates/rsfgseapy/: Cargo.toml  README.md
crates/rsfgseapy/src/: lib.rs
rsfgsea/: Cargo.toml
rsfgsea-gpu/: Cargo.toml
rsfgsea-gpu/src/: shader.wgsl
rsfgsea/benches/: gsea_bench.rs
rsfgsea/src/: algo.rs  core.rs  prelude.rs
rsfgsea/tests/: integration_test.rs  r_validation.rs  synthetic_test.rs  test_pathway.gmt
rsfgseapy/: Cargo.toml  pyproject.toml
