[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rsfgseapy"
version = "0.1.0"
description = "Fast Gene Set Enrichment Analysis in Rust (Python bindings)"
authors = [{name = "Antigravity"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rsfgseapy"
