[package]
name = "rsfgsea-cli"
version = "0.1.0"
edition = "2024"
authors = ["Denis Demin"]
description = "Command-line interface for rsfgsea"
license = "MIT"

[[bin]]
name = "rsfgsea"
path = "src/main.rs"

[dependencies]
rsfgsea = { path = "../rsfgsea" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"

[features]
default = []
gpu = ["rsfgsea/gpu"]
