[package]
name = "rsfgsea-cli"
version = "0.2.0"
edition = "2024"
authors = ["Denis Demin"]
description = "Command-line interface for rsfgsea"
license = "MIT"

[[bin]]
name = "rsfgsea"
path = "src/main.rs"

[[bin]]
name = "gsea-bench"
path = "src/bin/benchmark.rs"

[[bin]]
name = "gsea-verify"
path = "src/bin/verify_precision.rs"

[[bin]]
name = "gsea-optimize-test"
path = "src/bin/verify_optimization.rs"

[dependencies]
rsfgsea = { path = "../rsfgsea" }
rsfgsea-gpu = { path = "../rsfgsea-gpu" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
pollster = "0.3"
flate2 = "1.0"
ndarray = "0.15"
csv = "1.3"
rand = "0.8"

[features]
default = []
gpu = ["rsfgsea/gpu"]
