[package]
name = "rsfgsea"
version = "0.2.0"
edition = "2024"
authors = ["Denis Demin"]
description = "Fast Gene Set Enrichment Analysis in Rust"
license = "MIT"

[dependencies]
anyhow = "1.0"
csv = "1.3"
itertools = "0.13"
num_cpus = "1.13"
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
special = "0.10"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }

# Optional GPU support
rsfgsea-gpu = { path = "../rsfgsea-gpu", optional = true }

[dev-dependencies]
criterion = "0.4"

[features]
default = []
gpu = ["dep:rsfgsea-gpu", "dep:tokio"]

[[bench]]
name = "gsea_bench"
harness = false
